--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
-body {}
+body {
     background-color: gray;
     color: black;
     font-family: Helvetica;
     font-size: 14px;
-    }
-    .reverse {
+}
+.reverse {
     background-color: black !important;
     color: white;
-    }
-    p {
+}
+p {
     padding: 20px;
+}
